Fix theme icon alignment and padding for mobile view

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -107,7 +107,7 @@ a:first-of-type {
   height: 1.2rem;
   position: relative;
   fill: var(--black);
-  top: 11%;
+  top: 8%;
   cursor: pointer;
 }
 .theme-icon.moon {
@@ -128,18 +128,21 @@ a:first-of-type {
   .mood-buttons {
     font-size: 0.9rem;
   }
+  .header-mood-and-theme > .mood-buttons > button {
+    padding-bottom: 0.1rem;
+  }
   .theme-button {
     margin: 0 0 0 0.5rem;
   }
   .theme-icon.sun {
     margin: 0;
-    height: 1rem;
-        top: -100%;
+    height: 1.1rem;
+    top: -100%;
 
   }
   .theme-icon.moon {
     margin: 0;
-    height: 1.3rem;
+    height: 1.4rem;
     top: -90%;
   }
 }
